--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,30 +15,62 @@
 
     <!--Boton: REGISTRARSE-->
 
-    <ImageView
-        android:layout_width="331dp"
-        android:layout_height="316dp"
-        android:layout_marginTop="20dp"
-        app:srcCompat="@drawable/logocolor" />
-
-    <Button
-        android:id="@+id/registro_btn"
-        android:text="Registro"
-        style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/login_btn"/> <!--para que esten juntos los botones-->
+    <!--para que esten juntos los botones-->
 
 
     <!--Boton: LOGIN-->
-    <Button
-        android:id="@+id/login_btn"
-        android:text="Login"
+
+    <ImageView
+        android:layout_width="333dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="100dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="146dp"
+        android:layout_marginBottom="420dp"
+        tools:srcCompat="@drawable/logo" />
+
+    <Button
+        android:id="@+id/registro_btn"
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="75dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="240dp"
+
+        android:drawableStart="@drawable/account"
+        android:drawableLeft="@drawable/account"
+        android:drawablePadding="5dp"
+        android:minWidth="230dp"
+        android:text="Registro" />
+
+    <Button
+        android:id="@+id/login_btn"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="132dp"
+        android:drawableStart="@drawable/key"
+        android:drawableLeft="@drawable/key"
+        android:text="Login" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="38dp"
+
+        android:layout_marginStart="114dp"
+        android:layout_marginLeft="114dp"
+        android:layout_marginTop="70dp"
+        android:text="¡Bienvenido!"
+        android:textAlignment="center"
+        android:textColor="@color/colorAccent"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:gravity="center_horizontal" />
 
 
 </RelativeLayout>
