Login, logout y Registro OK

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,62 +15,41 @@
 
     <!--Boton: REGISTRARSE-->
 
-    <!--para que esten juntos los botones-->
-
 
     <!--Boton: LOGIN-->
-
     <ImageView
-        android:layout_width="333dp"
-        android:layout_height="wrap_content"
+        android:layout_width="299dp"
+        android:layout_height="293dp"
         android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="4dp"
+        app:srcCompat="@drawable/logo" />
+
+    <Button
+        android:id="@+id/login_btn"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="391dp"
+        android:layout_height="75dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="146dp"
-        android:layout_marginBottom="420dp"
-        tools:srcCompat="@drawable/logo" />
+        android:layout_marginBottom="110dp"
+        android:drawableStart="@drawable/key"
+        android:drawableLeft="@drawable/key"
+        android:text="Login" />
 
     <Button
         android:id="@+id/registro_btn"
         style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_width="match_parent"
-        android:layout_height="75dp"
-        android:layout_alignParentBottom="true"
+        android:layout_width="372dp"
+        android:layout_height="73dp"
+        android:layout_above="@id/login_btn"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="240dp"
-
+        android:layout_marginBottom="19dp"
         android:drawableStart="@drawable/account"
         android:drawableLeft="@drawable/account"
         android:drawablePadding="5dp"
         android:minWidth="230dp"
         android:text="Registro" />
-
-    <Button
-        android:id="@+id/login_btn"
-        style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="132dp"
-        android:drawableStart="@drawable/key"
-        android:drawableLeft="@drawable/key"
-        android:text="Login" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="38dp"
-
-        android:layout_marginStart="114dp"
-        android:layout_marginLeft="114dp"
-        android:layout_marginTop="70dp"
-        android:text="¡Bienvenido!"
-        android:textAlignment="center"
-        android:textColor="@color/colorAccent"
-        android:textSize="20dp"
-        android:textStyle="bold"
-        android:gravity="center_horizontal" />
 
 
 </RelativeLayout>
