--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,20 +8,34 @@
     tools:context=".LoginActivity">
 
 
+
     <!--TextView: LOGIN -->
+    <ImageView
+        android:layout_width="198dp"
+        android:layout_height="220dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="71dp"
+        android:layout_marginLeft="71dp"
+        android:layout_marginTop="21dp"
+        app:srcCompat="@drawable/logo" />
+
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:text="Login"
-        android:textColor="@color/colorPrimary"
-        android:textStyle="bold"
-        android:layout_marginTop="30dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="-9dp"
+        android:layout_marginTop="185dp"
         android:gravity="center_horizontal"
-        android:textSize="25sp"/>
-
-    <!--TextView: EMAIL -->
+        android:text="LOGIN"
+        android:textAlignment="center"
+        android:textColor="@color/colorAccent"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:layout_marginLeft="-9dp" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
@@ -57,27 +71,30 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <!--TextView: BOTON REGISTRO -->
+
+    <!--TextView: Ir a RegistroActivity -->
+
     <Button
         android:id="@+id/loginBtn"
         style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="131dp"
+        android:layout_height="62dp"
         android:layout_below="@id/contrasenaTIL"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="26dp"
         android:drawableLeft="@drawable/key"
         android:drawablePadding="5dp"
-        android:layout_centerHorizontal="true"
         android:text="Entrar" />
 
-    <!--TextView: Ir a RegistroActivity -->
     <TextView
         android:id="@+id/noestar_registradoTv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="¿Aún no tienes una cuenta? Regístrate! "
-        android:textAlignment="center"
-        android:gravity="center_horizontal"
         android:layout_below="@id/loginBtn"
         android:layout_marginTop="30dp"
-        android:textColor="@color/colorBlack"/>
+        android:gravity="center_horizontal"
+        android:text="¿Aún no tienes una cuenta? Regístrate! "
+        android:textAlignment="center"
+        android:textColor="@color/colorBlack" />
 
 </RelativeLayout>
