--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -7,21 +7,37 @@
     android:padding="20dp"
     tools:context=".RegistroActivity">
 
+    <!--LOGO -->
+
 
     <!--TextView: Registro -->
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:text="Registro"
-        android:textColor="@color/colorPrimary"
-        android:textStyle="bold"
-        android:layout_marginTop="30dp"
-        android:gravity="center_horizontal"
-        android:textSize="25sp"/>
+    <ImageView
+        android:layout_width="198dp"
+        android:layout_height="220dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="71dp"
+        android:layout_marginLeft="71dp"
+        android:layout_marginTop="21dp"
+        app:srcCompat="@drawable/logo" />
 
-    <!--TextView: EMAIL -->
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="-9dp"
+        android:layout_marginTop="185dp"
+        android:gravity="center_horizontal"
+        android:text="Regístrate!"
+        android:textAlignment="center"
+        android:textColor="@color/colorAccent"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:layout_marginLeft="-9dp" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
@@ -57,19 +73,21 @@
         </com.google.android.material.textfield.TextInputLayout>
 
             <!--TextView: BOTON REGISTRO -->
-            <Button
-                android:id="@+id/registro_btn"
-                style="@style/Widget.AppCompat.Button.Colored"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/contrasenaTIL"
-                android:drawableLeft="@drawable/account"
-                android:drawablePadding="5dp"
-                android:layout_centerHorizontal="true"
-                android:text="Registrarse" />
 
-        <!--TextView: BOTON REGISTRO -->
-        <TextView
+    <!--TextView: BOTON REGISTRO -->
+    <Button
+        android:id="@+id/registro_btn"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="161dp"
+        android:layout_height="59dp"
+        android:layout_below="@id/contrasenaTIL"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="23dp"
+        android:drawableLeft="@drawable/account"
+        android:drawablePadding="5dp"
+        android:text="Registrarse" />
+
+    <TextView
             android:id="@+id/estar_registradoTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
