--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -81,21 +81,25 @@
         android:layout_height="62dp"
         android:layout_below="@id/contrasenaTIL"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="26dp"
+        android:layout_marginTop="8dp"
         android:drawableLeft="@drawable/key"
         android:drawablePadding="5dp"
         android:text="Entrar" />
 
+    <!-- Acceso con google -->
+
     <TextView
-    android:id="@+id/noestar_registradoTv"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_below="@id/loginBtn"
-    android:layout_marginTop="30dp"
-    android:gravity="center_horizontal"
-    android:text="¿Aún no tienes una cuenta? Regístrate! "
-    android:textAlignment="center"
-    />
+        android:id="@+id/noestar_registradoTv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/loginBtn"
+        android:layout_alignParentEnd="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="57dp"
+        android:layout_marginEnd="13dp"
+        android:gravity="center_horizontal"
+        android:text="¿Aún no tienes una cuenta? Regístrate! "
+        android:textAlignment="center" />
 
     <TextView
         android:id="@+id/olvidar_contrasenaTv"
@@ -103,11 +107,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/loginBtn"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="61dp"
+        android:layout_marginTop="12dp"
         android:gravity="center_horizontal"
         android:text="¿Has olvidado la contraseña?"
-        android:textAlignment="center"
-        />
+        android:textAlignment="center" />
 
 
 </RelativeLayout>
