--- a/app/src/main/res/menu/menu_nav.xml
+++ b/app/src/main/res/menu/menu_nav.xml
@@ -16,4 +16,9 @@
     <item android:id="@+id/nav_ajustes"
         android:title="Ajustes"
         android:icon="@drawable/ic_ajustes_black"/>
+
+    <item android:id="@+id/nav_perfil"
+        android:title="Perfil"
+        android:icon="@drawable/ic_perfil_black"/>
+
 </menu>
