--- a/app/src/main/res/menu/menu_nav.xml
+++ b/app/src/main/res/menu/menu_nav.xml
@@ -3,22 +3,22 @@
 
     <item android:id="@+id/nav_home"
         android:title="Home"
-        android:icon="@drawable/ic_home_black"/>
+        android:icon="@drawable/home"/>
 
     <item android:id="@+id/nav_notificaciones"
         android:title="Notificaciones"
-        android:icon="@drawable/ic_notificaciones_black"/>
+        android:icon="@drawable/notificaciones"/>
 
     <item android:id="@+id/nav_publicacion"
         android:title="Publicacion"
-        android:icon="@drawable/ic_publicacion_black"/>
+        android:icon="@drawable/nueva_publicacion"/>
 
     <item android:id="@+id/nav_ajustes"
         android:title="Ajustes"
-        android:icon="@drawable/ic_ajustes_black"/>
+        android:icon="@drawable/ajustes"/>
 
     <item android:id="@+id/nav_perfil"
         android:title="Perfil"
-        android:icon="@drawable/ic_perfil_black"/>
+        android:icon="@drawable/perfil"/>
 
 </menu>
