Perfil terminado (no se ve la pantalla de perfil)

--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -21,5 +21,6 @@
         android:layout_height="58dp"
         android:layout_gravity="bottom"
         android:background="@color/colorPrimary"
-        app:menu="@menu/menu_nav"></com.google.android.material.bottomnavigation.BottomNavigationView>
+        app:menu="@menu/menu_nav">
+    </com.google.android.material.bottomnavigation.BottomNavigationView>
 </LinearLayout>
