--- a/app/src/main/res/layout/fragment_publicacion.xml
+++ b/app/src/main/res/layout/fragment_publicacion.xml
@@ -12,6 +12,6 @@
         android:textAlignment="center"
         android:textSize="30sp"
         android:gravity="center"
-        android:text="Perfil" />
+        android:text="Publicacion" />
 
 </FrameLayout>
