--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -49,9 +49,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
-                        android:text="Name"
                         android:layout_marginTop="5dp"
                         android:textSize="25sp"
+                        android:text=""
                         android:textColor="@color/colorWhite"
                         android:layout_marginLeft="5dp" />
 
@@ -61,7 +61,6 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:textColor="@color/colorWhite"
-                        android:text="Descripción"
                         android:layout_marginLeft="5dp" />
                 </LinearLayout>
             </LinearLayout>
