--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="horizontal"
-    tools:context=".PerfilActivity">
+    tools:context=".login.InicioActivity">
 
     <FrameLayout
         android:id="@+id/content"
@@ -18,8 +18,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:background="@color/colorPrimary"
-        app:itemIconTint="#000000"
-        app:itemTextColor="#000000"
+        android:background="@color/colorAccent"
+        app:itemIconTint="#FFF"
+        app:itemTextColor="#FFF"
         app:menu="@menu/menu_nav"></com.google.android.material.bottomnavigation.BottomNavigationView>
 </LinearLayout>
