Barra de navegacion y gestion del perfil OK

--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -5,21 +5,23 @@
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     tools:context=".login.InicioActivity">
 
     <FrameLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></FrameLayout>
+        android:layout_height="match_parent">
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/navigation"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:background="@color/colorAccent"
-        app:itemIconTint="#FFF"
-        app:itemTextColor="#FFF"
-        app:menu="@menu/menu_nav"></com.google.android.material.bottomnavigation.BottomNavigationView>
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/navigation"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_gravity="bottom|center"
+            android:background="@color/colorAccent"
+            app:itemIconTint="#FFF"
+            app:itemTextColor="#FFF"
+            app:menu="@menu/menu_nav"></com.google.android.material.bottomnavigation.BottomNavigationView>
+    </FrameLayout>
+
 </LinearLayout>
