--- a/app/src/main/res/layout/activity_pantalla_carga.xml
+++ b/app/src/main/res/layout/activity_pantalla_carga.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorWhite"
-    tools:context=".login.Pantalla_Carga_Activity" >
+    tools:context=".login.Pantalla_CargaActivity" >
 
     <ImageView
         android:id="@+id/imageView"
