--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -36,7 +36,6 @@
                     android:layout_marginStart="20dp"
                     android:layout_marginLeft="20dp"
                     android:background="@color/colorAccent"
-                    android:padding="16dp"
                     app:srcCompat="@drawable/foto_predeterminada" />
 
                 <LinearLayout
@@ -58,7 +57,7 @@
                     <TextView
                         android:id="@+id/descripcion"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="40dp"
                         android:layout_marginStart="5dp"
                         android:textColor="@color/colorWhite"
                         android:layout_marginLeft="5dp" />
@@ -70,11 +69,17 @@
     <!--Creamos el un boton flotante para modificar-->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/boton_flotante"
-        android:layout_width="wrap_content"
+        android:layout_width="255dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentEnd="true"
-        android:layout_margin="10dp"
         android:layout_alignParentRight="true"
-        android:src="@drawable/editar"/>
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="151dp"
+        android:layout_marginLeft="151dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginBottom="358dp"
+        android:src="@drawable/editar" />
 </RelativeLayout>
