--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="horizontal"
-    tools:context=".PerfilActivity">
+    tools:context=".login.InicioActivity">
 
     <FrameLayout
         android:id="@+id/content"
