--- a/app/src/main/res/menu/menu_nav.xml
+++ b/app/src/main/res/menu/menu_nav.xml
@@ -13,12 +13,16 @@
         android:title="Publicacion"
         android:icon="@drawable/nueva_publicacion"/>
 
-    <item android:id="@+id/nav_ajustes"
+    <!--  <item android:id="@+id/nav_ajustes"
         android:title="Ajustes"
-        android:icon="@drawable/ajustes"/>
+        android:icon="@drawable/ajustes"/> -->
 
     <item android:id="@+id/nav_perfil"
         android:title="Perfil"
-        android:icon="@drawable/perfil"/>
+        android:icon="@drawable/perfil" />
+
+    <item android:id="@+id/nav_buscador"
+        android:title="Buscador"
+        android:icon="@drawable/search_icon"/>
 
 </menu>
