cambios esteticos de menu

--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -20,7 +20,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="180dp"
                 android:scaleType="fitXY"
-                android:background="@color/colorPrimary">
+                android:background="@color/colorAccent">
             </ImageView>
 
             <LinearLayout
@@ -35,8 +35,8 @@
                     android:layout_height="match_parent"
                     android:layout_marginStart="20dp"
                     android:layout_marginLeft="20dp"
-                    android:background="@color/colorAccent"
-                    app:srcCompat="@drawable/foto_predeterminada" />
+                    android:background="@color/colorPrimary"
+                    app:srcCompat="@drawable/account" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
