--- a/app/src/main/res/layout/fragment_publicacion.xml
+++ b/app/src/main/res/layout/fragment_publicacion.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".menu.PublicacionFragment">
+    tools:context=".publicacion.PublicacionFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,7 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#707070"
-            android:minHeight="350dp" />
+            android:minHeight="270dp" />
 
         <!--Descripcion del post -->
         <EditText
@@ -34,7 +34,7 @@
             android:padding="10dp"
             android:hint="Escriba la descripcion"
             android:inputType="textCapSentences|textMultiLine"
-            android:minHeight="100dp"
+            android:minHeight="69dp"
             android:gravity="start"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
@@ -44,9 +44,8 @@
             android:id="@+id/pPublicarBtn"
             style="@style/Widget.AppCompat.Button.Colored"
             android:text="Publicar"
-            android:layout_gravity="end"
+            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
-
     </LinearLayout>
 </ScrollView>
