--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -11,7 +11,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?android:attr/actionBarSize"
-        android:background="@color/colorPrimaryDark"
+        android:background="@color/colorPrimary"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <!-- Para la foto de perfil -->
@@ -21,7 +21,7 @@
             android:layout_height="35dp"
             android:scaleType="centerCrop"
             app:srcCompat="@drawable/icon_default"
-            app:c_background_color="@color/colorPrimaryDark"/>
+            app:c_background_color="@color/colorPrimary"/>
 
         <LinearLayout
             android:layout_width="match_parent"
