--- a/app/src/main/res/layout/activity_perfil_lista_publicacion.xml
+++ b/app/src/main/res/layout/activity_perfil_lista_publicacion.xml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".menu.perfil.PerfilFragment">
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    tools:context=".menu.perfil.PerfilListaPublicacionActivity">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -72,22 +68,4 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/linearLayout" />
         </RelativeLayout>
-    </ScrollView>
-
-    <!--Creamos el un boton flotante para modificar-->
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/boton_flotante"
-        android:layout_width="255dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="162dp"
-        android:layout_marginLeft="162dp"
-        android:layout_marginEnd="-7dp"
-        android:layout_marginRight="-7dp"
-        android:layout_marginBottom="395dp"
-        android:src="@drawable/editar" />
-</RelativeLayout>
+</ScrollView>
