--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,37 +5,36 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20dp"
-    tools:context=".login.LoginActivity">
+    tools:context=".login.LoginActivity"
+    android:background="@drawable/fondo_log2">
 
 
 
     <!--TextView: LOGIN -->
+
+
     <ImageView
-        android:layout_width="198dp"
-        android:layout_height="220dp"
-        android:layout_alignParentStart="true"
+        android:layout_width="187dp"
+        android:layout_height="76dp"
         android:layout_alignParentLeft="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="71dp"
-        android:layout_marginLeft="71dp"
-        android:layout_marginTop="21dp"
-        app:srcCompat="@drawable/logo" />
-
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="-9dp"
-        android:layout_marginTop="185dp"
+        android:layout_marginLeft="97dp"
+        android:layout_marginTop="168dp"
+        app:srcCompat="@drawable/logo" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="91dp"
         android:gravity="center_horizontal"
-        android:text="LOGIN"
+        android:text="de nuevo!"
         android:textAlignment="center"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="25sp"
-        android:textStyle="bold"
-        android:layout_marginLeft="-9dp" />
+        android:textStyle="bold" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
@@ -46,33 +45,35 @@
 
         <EditText
             android:id="@+id/emailEt"
-            android:inputType="textEmailAddress"
-            android:hint="E-mail"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="match_parent"
+            android:hint="E-mail"
+            android:inputType="textEmailAddress" />
+
     </com.google.android.material.textfield.TextInputLayout>
 
     <!--TextView: CONTRASEÑA -->
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/contrasenaTIL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:id="@+id/contrasenaTIL"
         android:layout_below="@id/emailTIL"
+        android:layout_centerInParent="true"
         app:passwordToggleEnabled="true"><!--el ojito de la contraseña-->
 
         <EditText
             android:id="@+id/contrasenaEt"
-            android:inputType="textPassword"
-            android:hint="Contraseña"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:hint="Contraseña"
+            android:inputType="textPassword" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <!--TextView: BOTON REGISTRO -->
 
     <!--TextView: Ir a RegistroActivity -->
+
+    <!-- Acceso con google -->
 
     <Button
         android:id="@+id/loginBtn"
@@ -81,22 +82,20 @@
         android:layout_height="62dp"
         android:layout_below="@id/contrasenaTIL"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="21dp"
         android:drawableLeft="@drawable/key"
         android:drawablePadding="5dp"
         android:text="Entrar" />
 
-    <!-- Acceso con google -->
-
     <TextView
         android:id="@+id/noestar_registradoTv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="307dp"
+        android:layout_height="29dp"
         android:layout_below="@id/loginBtn"
         android:layout_alignParentEnd="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="57dp"
-        android:layout_marginEnd="13dp"
+        android:layout_marginTop="51dp"
+        android:layout_marginEnd="37dp"
         android:gravity="center_horizontal"
         android:text="¿Aún no tienes una cuenta? Regístrate! "
         android:textAlignment="center" />
@@ -107,10 +106,21 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/loginBtn"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="16dp"
         android:gravity="center_horizontal"
         android:text="¿Has olvidado la contraseña?"
         android:textAlignment="center" />
+
+    <TextView
+        android:layout_width="170dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="42dp"
+        android:text="¡Bienvenido"
+        android:textAlignment="center"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="25sp"
+        android:textStyle="bold" />
 
 
 </RelativeLayout>
