--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -5,39 +5,33 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20dp"
-    tools:context=".login.RegistroActivity">
-
-    <!--LOGO -->
-
-
-    <!--TextView: Registro -->
-
-    <ImageView
-        android:layout_width="198dp"
-        android:layout_height="220dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="71dp"
-        android:layout_marginLeft="71dp"
-        android:layout_marginTop="21dp"
-        app:srcCompat="@drawable/logo" />
+    tools:context=".login.RegistroActivity"
+    android:background="@drawable/fondo_log1"
+ >
 
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/textView2"
+        android:layout_width="170dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="-9dp"
-        android:layout_marginTop="185dp"
-        android:gravity="center_horizontal"
-        android:text="Regístrate!"
+        android:layout_marginTop="42dp"
+        android:text="¡Registrate!"
         android:textAlignment="center"
-        android:textColor="@color/colorAccent"
+        android:textColor="#323232"
         android:textSize="25sp"
-        android:textStyle="bold"
-        android:layout_marginLeft="-9dp" />
+        android:textStyle="bold" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="187dp"
+        android:layout_height="76dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="97dp"
+        android:layout_marginTop="168dp"
+        app:srcCompat="@drawable/logo" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
@@ -97,5 +91,5 @@
             android:layout_below="@id/registro_btn"
             android:layout_marginTop="30dp"
             />
-    
+
 </RelativeLayout>
