--- a/app/src/main/res/layout/fragment_publicacion.xml
+++ b/app/src/main/res/layout/fragment_publicacion.xml
@@ -2,16 +2,17 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".publicacion.PublicacionFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="2dp"
+        android:layout_height="match_parent"
+        android:layout_margin="1dp"
         android:orientation="vertical">
 
         <!--Titulo de la imagen-->
+
         <EditText
             android:id="@+id/pTitulo"
             android:layout_width="match_parent"
@@ -26,7 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#FFF"
-            android:minHeight="250dp" />
+            android:minHeight="200dp" />
 
         <!--Descripcion del post -->
         <EditText
@@ -39,13 +40,15 @@
             android:minHeight="69dp"
             android:padding="10dp" />
 
-        <!--Boton para subir el post-->
         <Button
             android:id="@+id/pPublicarBtn"
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="143dp"
             android:layout_height="64dp"
             android:layout_gravity="center"
+            android:clickable="false"
             android:text="Publicar" />
+
+        <!--Boton para subir el post-->
     </LinearLayout>
 </ScrollView>
