Algunos fallos resueltos y diseño

--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -13,21 +13,20 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+
         <com.google.android.material.bottomnavigation.BottomNavigationView
 
             android:id="@+id/navegacion"
             android:layout_width="match_parent"
-            app:labelVisibilityMode="unlabeled"
             android:layout_height="60dp"
             android:layout_gravity="bottom|center"
             android:background="@color/colorAccent"
             android:outlineAmbientShadowColor="@color/colorPrimary"
+            app:itemIconSize="30sp"
             app:itemIconTint="@color/seleccionado"
             app:itemTextColor="#FFF"
-            app:itemIconSize="30sp"
-            app:menu="@menu/menu_nav"
-            >
-        </com.google.android.material.bottomnavigation.BottomNavigationView>
+            app:labelVisibilityMode="unlabeled"
+            app:menu="@menu/menu_nav"></com.google.android.material.bottomnavigation.BottomNavigationView>
     </FrameLayout>
 
 </LinearLayout>
