--- a/app/src/main/res/layout/activity_perfil_lista_publicacion.xml
+++ b/app/src/main/res/layout/activity_perfil_lista_publicacion.xml
@@ -33,7 +33,7 @@
                     android:layout_marginStart="20dp"
                     android:layout_marginLeft="20dp"
                     android:background="@color/colorPrimary"
-                    app:srcCompat="@drawable/account" />
+                    app:srcCompat="@drawable/icon_person" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
