--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -22,12 +22,13 @@
                 android:background="@drawable/fondo"
                 android:scaleType="fitXY"></ImageView>
 
+            <!-- Para que se publiquen los post de un usuario concreto -->
             <LinearLayout
                 android:id="@+id/linearLayout"
                 android:layout_width="match_parent"
                 android:layout_height="120dp"
-                android:orientation="horizontal"
-                android:layout_marginTop="100dp">
+                android:layout_marginTop="100dp"
+                android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/avatar"
@@ -36,7 +37,7 @@
                     android:layout_marginStart="20dp"
                     android:layout_marginLeft="20dp"
                     android:background="@color/colorAccent"
-                    app:srcCompat="@drawable/icon_default" />
+                    app:srcCompat="@drawable/img_inicio" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -48,45 +49,40 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
+                        android:layout_marginLeft="5dp"
                         android:layout_marginTop="5dp"
-                        android:textSize="25sp"
                         android:text=""
-                        android:textColor="@color/colorWhite"
-                        android:layout_marginLeft="5dp" />
+                        android:textColor="@color/colorMediumBlack"
+                        android:textSize="25sp" />
 
                     <TextView
                         android:id="@+id/descripcion"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
                         android:layout_marginStart="5dp"
-                        android:textColor="@color/colorWhite"
-                        android:layout_marginLeft="5dp" />
+                        android:layout_marginLeft="5dp"
+                        android:textColor="@color/colorMediumBlack" />
                 </LinearLayout>
             </LinearLayout>
 
-            <!-- Para que se publiquen los post de un usuario concreto -->
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView_posts"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/linearLayout" />
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/boton_flotante"
+                android:layout_width="62dp"
+                android:layout_height="71dp"
+                android:layout_marginStart="334dp"
+                android:layout_marginLeft="334dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginBottom="395dp"
+                android:src="@drawable/editar" />
         </RelativeLayout>
     </ScrollView>
 
     <!--Creamos el un boton flotante para modificar-->
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/boton_flotante"
-        android:layout_width="255dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="162dp"
-        android:layout_marginLeft="162dp"
-        android:layout_marginEnd="-7dp"
-        android:layout_marginRight="-7dp"
-        android:layout_marginBottom="395dp"
-        android:src="@drawable/editar" />
 </RelativeLayout>
