--- a/app/src/main/res/layout/fragment_publicacion.xml
+++ b/app/src/main/res/layout/fragment_publicacion.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -7,7 +8,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_margin="1dp"
         android:orientation="vertical">
 
@@ -16,26 +17,34 @@
         <EditText
             android:id="@+id/pTitulo"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Ponga un titulo"
+            android:layout_height="70dp"
+            android:drawableStart="@drawable/pin_icon"
+            android:hint=" Escriba aquí su ubicación"
             android:padding="10dp"
+            android:pointerIcon="zoom_in"
             android:singleLine="true" />
 
         <!--Imagen del post-->
-        <ImageView
-            android:id="@+id/pImagenIv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#FFF"
-            android:minHeight="200dp" />
 
         <!--Descripcion del post -->
+        <ImageView
+            android:id="@+id/pImagenIv"
+            android:layout_width="310dp"
+            android:layout_height="297dp"
+            android:layout_gravity="center"
+            android:background="@drawable/illustracion3"
+            android:minHeight="200dp"
+
+            />
+
         <EditText
             android:id="@+id/pDescripcionEt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:drawableRight="@drawable/pen_icon"
             android:gravity="start"
-            android:hint="Escriba la descripcion"
+            android:hint="¡Descríbenos tu viaje ! "
             android:inputType="textCapSentences|textMultiLine"
             android:minHeight="69dp"
             android:padding="10dp" />
